--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,10 @@ Portfolios
         padding: 0.5rem 0;
     }
 
+    .content-title{
+        border-radius: 15px;
+    }
+
     .portfolio-content:before {
         content: '';
         background-position: center;
@@ -216,7 +220,6 @@ Portfolios
         box-shadow: 0px 3px 9px 10px rgba(0,0,0,0.75);
         -webkit-box-shadow: 0px 3px 9px 10px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px 3px 9px 10px rgba(0,0,0,0.75);
-
     }
 }
 
